--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,10 @@
 @import 'tailwindcss';
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+	@apply p-0 m-0 box-border;
 	font-family: 'Times New Roman', Times, serif;
+}
+
+body {
+	@apply bg-[#EAEAEA];
 }
