--- a/src/Components/Cabeçalho/Cabecalho.module.css
+++ b/src/Components/Cabeçalho/Cabecalho.module.css
@@ -13,7 +13,7 @@
 /* Botão home */
 
 .home {
-    @apply flex justify-between items-center bg-[#630FA8] text-white p-[8px] rounded-[20px] h-[80px];
+    @apply flex justify-between items-center bg-[#630FA8] text-white p-[8px] rounded-[20px] h-[80px] cursor-pointer;
 }
 
 .home, .bi-house-door-fill {
@@ -77,7 +77,7 @@
 }
 
 .paragrafoNome {
-    @apply text-[20px];
+    @apply text-[25px] font-bold;
 }
 
 .fotoPerfil, .bi-pencil-square {
